istio-fleetman/deployment/azure/k8sVM1Net/manifest/1-staff-service-se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: staff-service
  namespace: vm
spec:
  hosts:
  - staff-service
  location: MESH_INTERNAL
  ports:
  - number: 8080
    name: http
    protocol: HTTP
    targetPort: 8080
  resolution: STATIC
  workloadSelector:
    labels:
      app: staff-service
